--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.5",
+    "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-maps": "1.14.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
