--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@here/flexpolyline": "^0.1.0",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -20,6 +22,7 @@
     "expo-media-library": "~16.0.5",
     "expo-sensors": "~13.0.9",
     "expo-status-bar": "~1.12.1",
+    "expo-video": "^1.2.7",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-maps": "1.14.0",
