--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-camera": "~15.0.16",
     "expo-location": "~17.0.1",
     "expo-media-library": "~16.0.5",
@@ -28,8 +29,7 @@
     "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-av": "~14.0.7"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
