--- a/package.json
+++ b/package.json
@@ -9,30 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.3",
+    "@expo/vector-icons": "^14.0.2",
     "@here/flexpolyline": "^0.1.0",
     "@mapbox/polyline": "^1.2.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-av": "~14.0.7",
-    "expo-camera": "~15.0.16",
-    "expo-location": "~17.0.1",
-    "expo-media-library": "~16.0.5",
-    "expo-sensors": "~13.0.9",
-    "expo-status-bar": "~1.12.1",
-    "expo-video": "^1.2.7",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-maps": "1.14.0",
+    "expo": "^52.0.0",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.5",
+    "expo-location": "~18.0.1",
+    "expo-media-library": "~17.0.2",
+    "expo-sensors": "~14.0.1",
+    "expo-status-bar": "~2.0.0",
+    "expo-video": "~2.0.0",
+    "polyline": "^0.2.0",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
