--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "^52.0.0",
     "expo-av": "~15.0.1",
     "expo-camera": "~16.0.5",
+    "expo-image-picker": "~16.0.3",
     "expo-location": "~18.0.1",
     "expo-media-library": "~17.0.2",
     "expo-sensors": "~14.0.1",
